WIP: Implemented most of the dashboard

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
+    "predist": "ng build --prod --base-href 'https://beeman.github.io/angular-tabler/'",
+    "dist": "angular-cli-ghpages",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
