--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@swimlane/ngx-charts": "^7.1.1",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
