--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "predist": "ng build --prod --base-href 'https://beeman.github.io/angular-tabler/'",
+    "predist": "ng build --prod --base-href 'https://tabler.github.io/tabler-angular/'",
     "dist": "angular-cli-ghpages",
     "test": "ng test",
     "lint": "ng lint",
