--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^5.2.0",
     "@swimlane/ngx-charts": "^7.1.1",
     "angular-pipes": "^7.1.0",
+    "bootstrap": "^4.0.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
