--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@swimlane/ngx-charts": "^7.1.1",
+    "angular-cli-ghpages": "^0.5.2",
     "angular-pipes": "^7.1.0",
     "bootstrap": "^4.0.0",
     "chart.js": "^2.7.2",
