Add dev run script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "dev": "ng serve --host 0.0.0.0 --aot",
     "build": "ng build --prod",
     "predist": "ng build --prod --base-href 'https://tabler.github.io/tabler-angular/'",
     "dist": "angular-cli-ghpages",
