--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ng2-charts": "^1.6.0",
+    "ngx-bootstrap": "^2.0.3",
     "rxjs": "^5.5.6",
     "simple-line-icons": "^2.4.1",
     "zone.js": "^0.8.19"
