Implement AppConfig for UI

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "ng": "ng",
     "dev": "ng serve --app demo --host 0.0.0.0 --aot",
     "apidocs": "ng serve --app apidocs --port=4201 --host 0.0.0.0 --aot",
-    "build": "ng build --prod",
-    "predist": "ng build --prod --base-href 'https://tabler.github.io/tabler-angular/'",
-    "dist": "angular-cli-ghpages",
+    "build": "ng build --prod --app demo",
+    "build:apidocs": "ng build --prod --app apidocs",
+    "predist": "ng build --prod --app apidocs --base-href 'https://tabler.github.io/tabler-angular/'",
+    "dist": "angular-cli-ghpages --dir ./dist/apps/apidocs",
     "test": "ng test",
     "lint": "./node_modules/.bin/nx lint && ng lint",
     "e2e": "ng e2e",
