--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "ng": "ng",
     "dev": "ng serve --app demo --host 0.0.0.0 --aot",
-    "apidocs": "ng serve --app apidocs --port=4201 --host 0.0.0.0 --aot",
-    "build": "ng build --prod --app demo",
-    "build:apidocs": "ng build --prod --app apidocs",
-    "predist": "ng build --prod --app apidocs --base-href 'https://tabler.github.io/tabler-angular/'",
-    "dist": "angular-cli-ghpages --dir ./dist/apps/apidocs",
+    "build": "npm run build:demo && npm run build:docs",
+    "build:demo": "ng build --prod --app demo",
+    "build:docs": "ng build --prod --app docs",
+    "demo": "ng serve --app demo --port=4200 --host 0.0.0.0 --aot",
+    "docs": "ng serve --app docs --port=4201 --host 0.0.0.0 --aot",
+    "predist:docs": "ng build --prod --app docs --base-href 'https://tabler.github.io/tabler-angular/'",
+    "dist:docs": "angular-cli-ghpages --dir ./dist/apps/docs",
     "test": "ng test",
     "lint": "./node_modules/.bin/nx lint && ng lint",
     "e2e": "ng e2e",
