--- a/apps/docs/src/tsconfig.app.json
+++ b/apps/docs/src/tsconfig.app.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../../dist/out-tsc/apps/apidocs",
+    "outDir": "../../../dist/out-tsc/apps/docs",
     "module": "es2015"
   },
   "include": [
