--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ngrx/effects": "5.2.0",
+    "@ngrx/router-store": "5.0.1",
+    "@ngrx/store": "5.2.0",
+    "@ngrx/store-devtools": "5.2.0",
+    "@nrwl/nx": "0.10.0",
     "@swimlane/ngx-charts": "^7.1.1",
     "angular-cli-ghpages": "^0.5.2",
     "angular-pipes": "^7.1.0",
@@ -45,16 +50,12 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ng2-charts": "^1.6.0",
+    "ngrx-store-freeze": "^0.2.1",
     "ngx-bootstrap": "^2.0.3",
+    "ngx-highlightjs": "^1.4.1",
     "rxjs": "^5.5.6",
     "simple-line-icons": "^2.4.1",
-    "zone.js": "^0.8.19",
-    "@nrwl/nx": "0.10.0",
-    "@ngrx/store": "5.2.0",
-    "@ngrx/router-store": "5.0.1",
-    "@ngrx/effects": "5.2.0",
-    "@ngrx/store-devtools": "5.2.0",
-    "ngrx-store-freeze": "^0.2.1"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.3",
