--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ngx-highlightjs": "^1.4.1",
     "rxjs": "^5.5.6",
     "simple-line-icons": "^2.4.1",
+    "time-ago-pipe": "^1.3.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
