--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "update": "./node_modules/.bin/nx update",
     "update:check": "./node_modules/.bin/nx update check",
     "update:skip": "./node_modules/.bin/nx update skip",
-    "postinstall": "./node_modules/.bin/nx postinstall"
+    "postinstall": "./node_modules/.bin/nx postinstall",
+    "workspace-schematic": "./node_modules/.bin/nx workspace-schematic"
   },
   "standard-version": {
     "scripts": {
