--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tabler/tabler-angular",
+  "name": "@tabler/angular",
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
@@ -13,8 +13,7 @@
     "build:libs": "node .bin/build-libs",
     "link:libs": "node .bin/link-libs",
     "release": "standard-version --commit-all",
-    "prepublish": "npm run link:libs && npm run build:libs",
-    "publish": "node .bin/publish-libs",
+    "publish": "npm run link:libs && npm run build:libs && node .bin/publish-libs",
     "postpublish": "git push --follow-tags origin master",
     "publish:docs": "angular-cli-ghpages --dir ./dist/apps/docs",
     "test": "ng test",
@@ -38,17 +37,17 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/router": "^5.2.9",
+    "@angular/animations": "5.2.7",
+    "@angular/common": "5.2.7",
+    "@angular/compiler": "5.2.7",
+    "@angular/core": "5.2.7",
+    "@angular/forms": "5.2.7",
+    "@angular/platform-browser": "5.2.7",
+    "@angular/platform-browser-dynamic": "5.2.7",
+    "@angular/router": "5.2.7",
+    "@compodoc/compodoc": "^1.1.1",
     "@ngrx/effects": "5.2.0",
-    "@ngrx/router-store": "5.2.0",
+    "@ngrx/router-store": "5.0.1",
     "@ngrx/store": "5.2.0",
     "@ngrx/store-devtools": "5.2.0",
     "@nrwl/nx": "0.11.0",
@@ -56,41 +55,40 @@
     "angular-pipes": "^7.1.0",
     "bootstrap": "^4.0.0",
     "chart.js": "^2.7.2",
-    "core-js": "^2.5.4",
+    "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ng2-charts": "^1.6.0",
     "ngrx-store-freeze": "^0.2.1",
     "ngx-bootstrap": "^2.0.3",
     "ngx-highlightjs": "^1.4.1",
-    "rxjs": "^5.5.8",
+    "rxjs": "^5.5.6",
     "simple-line-icons": "^2.4.1",
-    "time-ago-pipe": "^1.3.2",
-    "zone.js": "^0.8.25"
+    "viz": "^0.0.1",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/language-service": "^5.2.9",
-    "@nrwl/schematics": "^0.11.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~9.6.2",
-    "angular-cli-ghpages": "^0.5.2",
-    "codelyzer": "^4.2.1",
-    "concurrently": "^3.5.1",
-    "jasmine-core": "~3.1.0",
+    "@angular/compiler-cli": "5.2.7",
+    "@angular/language-service": "5.2.7",
+    "@ngrx/schematics": "5.2.0",
+    "@nrwl/schematics": "0.11.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^1.0.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^2.4.1",
-    "prettier": "1.11.1",
-    "protractor": "~5.3.1",
+    "prettier": "1.10.2",
+    "protractor": "~5.1.2",
     "standard-version": "^4.3.0",
-    "ts-node": "~5.0.1",
+    "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.8.1"
+    "typescript": "2.6.2"
   }
 }
