--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "@nrwl/nx": "0.11.0",
     "@swimlane/ngx-charts": "^7.2.0",
     "angular-pipes": "^7.1.0",
+    "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "^4.0.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
+    "firebase": "^4.12.1",
     "font-awesome": "^4.7.0",
     "ng2-charts": "^1.6.0",
     "ngrx-store-freeze": "^0.2.1",
