feat(fire): implement authentication example

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
+    "@angular/cli": "1.7.4",
     "@angular/compiler-cli": "5.2.7",
     "@angular/language-service": "5.2.7",
     "@ngrx/schematics": "5.2.0",
