feat(docs): implement new docs viewer

--- a/package.json
+++ b/package.json
@@ -64,10 +64,15 @@
     "core-js": "^2.4.1",
     "firebase": "^4.12.1",
     "font-awesome": "^4.7.0",
+    "html-loader": "^0.5.5",
+    "json-formatter-js": "^2.2.0",
+    "markdown-loader": "^2.0.2",
     "ng2-charts": "^1.6.0",
     "ngrx-store-freeze": "^0.2.1",
     "ngx-bootstrap": "^2.0.3",
     "ngx-highlightjs": "^1.4.1",
+    "prismjs": "^1.14.0",
+    "prismjs-loader": "0.0.4",
     "raw-loader": "^0.5.1",
     "rxjs": "^5.5.6",
     "simple-line-icons": "^2.4.1",
