--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "dev": "npm run demo",
     "demo": "ng serve --app demo --port=4200 --host 0.0.0.0 --aot",
     "docs": "ng serve --app docs --port=4201 --host 0.0.0.0 --aot",
-    "fire": "ng serve --app fire --port=4202 --host 0.0.0.0 --aot",
-    "build": "npm run build:demo && npm run build:docs && npm run build:fire",
+    "build": "npm run build:demo && npm run build:docs",
     "build:demo": "ng build --prod --app demo",
     "build:docs": "ng build --prod --app docs",
-    "build:fire": "ng build --prod --app fire",
     "build:libs": "node .bin/build-libs",
     "link:libs": "node .bin/link-libs",
     "release": "standard-version --commit-all",
@@ -58,11 +56,9 @@
     "@nrwl/nx": "0.11.0",
     "@swimlane/ngx-charts": "^7.2.0",
     "angular-pipes": "^7.1.0",
-    "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "4.0.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
-    "firebase": "^4.12.1",
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
     "json-formatter-js": "^2.2.0",
