chore: updated to use the new way for running multiple projects
source: https://stackoverflow.com/a/50292095/5836034 
fixes #18

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "ng": "ng",
     "dev": "npm run demo",
-    "demo": "ng serve --app demo --port=4200 --host 0.0.0.0 --aot",
-    "docs": "ng serve --app docs --port=4201 --host 0.0.0.0 --aot",
+    "demo": "ng serve --project=demo --port=4200 --host 0.0.0.0 --aot",
+    "docs": "ng serve --project=docs --port=4201 --host 0.0.0.0 --aot",
     "build": "npm run build:demo && npm run build:docs",
-    "build:demo": "ng build --prod --app demo",
-    "build:docs": "ng build --prod --app docs",
+    "build:demo": "ng build --prod --project=demo",
+    "build:docs": "ng build --prod --project=docs",
     "build:libs": "node .bin/build-libs",
     "link:libs": "node .bin/link-libs",
     "release": "standard-version --commit-all",
