--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
     "dep-graph": "./node_modules/.bin/nx dep-graph",
     "help": "./node_modules/.bin/nx help",
-    "affected:test": "./node_modules/.bin/nx affected:test"
+    "affected:test": "./node_modules/.bin/nx affected:test",
+    "release-it": "release-it"
   },
   "standard-version": {
     "scripts": {
@@ -79,6 +80,7 @@
     "rxjs-compat": "6.0.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.1",
     "@angular/cli": "6.0.1",
     "@angular/compiler-cli": "6.0.1",
     "@angular/language-service": "6.0.1",
@@ -89,6 +91,7 @@
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
+    "jasmine-marbles": "0.3.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -98,11 +101,10 @@
     "ng-packagr": "^2.4.1",
     "prettier": "1.10.2",
     "protractor": "~5.3.0",
+    "release-it": "^7.6.2",
     "standard-version": "^4.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.1",
-    "jasmine-marbles": "0.3.1"
+    "typescript": "2.7.2"
   }
 }
