--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@swimlane/ngx-charts": "^7.2.0",
     "angular-pipes": "^7.1.0",
     "bootstrap": ">=4.3.1",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.12.9",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
