Updated npm to 6.9.0 from 6.5.0

--- a/package.json
+++ b/package.json
@@ -61,25 +61,26 @@
     "@swimlane/ngx-charts": "^7.2.0",
     "angular-pipes": "^7.1.0",
     "bootstrap": ">=4.3.1",
-    "jquery": "^1.9.1",
-    "popper.js": "^1.12.9",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
+    "jquery": "^1.9.1",
     "json-formatter-js": "^2.2.0",
     "markdown-loader": "^2.0.2",
     "ng2-charts": "^1.6.0",
     "ngrx-store-freeze": "^0.2.1",
     "ngx-bootstrap": "^2.0.3",
+    "np": "^5.0.0",
+    "popper.js": "^1.12.9",
     "prismjs": "^1.14.0",
     "prismjs-loader": "0.0.4",
     "raw-loader": "^0.5.1",
     "rxjs": "6.0.0",
+    "rxjs-compat": "6.0.0",
     "simple-line-icons": "^2.4.1",
     "viz": "^0.0.1",
-    "zone.js": "^0.8.26",
-    "rxjs-compat": "6.0.0"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.1",
